--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Conference Dashboard</title>
+  <!-- Icon font -->
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <!-- Custom stylesheet -->
   <link rel="stylesheet" href="/index.css">
 </head>
 <body ng-app="dashboard" ng-controller="DashboardController as vm">
@@ -19,10 +21,12 @@
     <p ng-repeat="log in vm.logs track by $index">> {{log}}</p>
   </div>
   
+  <!-- External dependencies -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-duration-format/1.3.0/moment-duration-format.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.min.js"></script>
   <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
+  <!-- Angular application files -->
   <script src="dashboard.module.js"></script>
   <script src="conference.service.js"></script>
   <script src="conference-participant.directive.js"></script>
